ansible/roles/jaeger/files/jaeger-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-nodeport
  namespace: observability
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/name: jaeger
  ports:
    - name: http-query
      protocol: TCP
      port: 16686
      targetPort: 16686
      nodePort: 31686
